[gd_scene load_steps=8 format=3 uid="uid://cckevm4hnnk8k"]

[ext_resource type="Theme" uid="uid://cgrxveliicbi8" path="res://themes/button.tres" id="1_x3m4o"]
[ext_resource type="Script" path="res://scenes/buttons/ButtonClicker.gd" id="2_pu3a2"]
[ext_resource type="Script" path="res://scenes/buttons/LabelValue.gd" id="3_si7yg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g428h"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.137255, 0.670588, 0.368627, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0h6cv"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.952941, 0.611765, 0.0705882, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eimq6"]
bg_color = Color(0.027451, 0.713726, 0.435294, 0.45098)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhswt"]
draw_center = false

[node name="ButtonClicker" type="Control"]
custom_minimum_size = Vector2(390, 110)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 390.0
offset_bottom = 110.0
theme = ExtResource("1_x3m4o")
theme_override_styles/normal = SubResource("StyleBoxFlat_g428h")
theme_override_styles/hover = SubResource("StyleBoxFlat_0h6cv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_eimq6")
theme_override_styles/focus = SubResource("StyleBoxFlat_rhswt")
script = ExtResource("2_pu3a2")

[node name="LabelText" type="Label" parent="Button"]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 124.0
offset_bottom = 42.0
text = "LabelText"

[node name="LabelPrice" type="Label" parent="Button"]
layout_mode = 0
offset_left = 19.0
offset_top = 69.0
offset_right = 123.0
offset_bottom = 92.0
text = "LabelPrice"

[node name="LabelOwned" type="Label" parent="Button"]
layout_mode = 0
offset_left = 228.0
offset_top = 16.0
offset_right = 336.0
offset_bottom = 39.0
text = "LabelOwned"

[node name="LabelValue" type="Label" parent="Button"]
layout_mode = 0
offset_left = 18.0
offset_top = 44.0
offset_right = 134.0
offset_bottom = 67.0
text = "LabelValue"
script = ExtResource("3_si7yg")
